# spdsx-pro-kitedit

./: .clang-format  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  install-app.sh  presubmit.sh  vcpkg.json
assets/: README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: spdutil.md
ports/specgram/: portfile.cmake  vcpkg.json
re/: README.md  link_all_kits.py  spdsx.py
re-cache/captures/: SAMPLE-RECORD-HASH.md  WAVE-EXPORT-PROTOCOL.md  WAVE-UPLOAD-DELETE-PROTOCOL.md
re/debugging_scripts/: diag.py  frametest.py  rawwrite.py
re/frida-scripts/: README.md  bulkread.js  dt1log.js  editlog.js  framelog.js  paramlog.js  parse_capture.py  portlog.js  sniff.js  statelog.js  wavexport.js  writecmd.js
report-relay/: README.md  smoke.js
report-relay/api/v1/: report.js
source/: actions.h  actions.hpp  actions_test.cc  actions_test.h  app_log.cc  app_log.h  app_log_test.cc  audio.cc  audio.cpp  audio.h  audio.hpp  audio_files.h  audio_files.hpp  bug_report.cc  bug_report.h  bug_report_test.cc  commands.h  commands.hpp  device_db.cc  device_db.h  device_db_test.cc  device_db_test.h  device_document.cc  device_document.h  device_document_test.cc  device_document_test.h  device_model.h  device_model_test.cc  device_model_test.h  device_samples.cc  device_samples.h  device_sync.cc  device_sync.h  device_sync_test.cc  feedback_dialog.cc  feedback_dialog.h  kit_chooser.cc  kit_chooser.h  kit_document.cc  kit_document.cpp  (+41 more)
source/device/: kit_image.cc  kit_image.h  kit_image_test.cc  protocol.cc  protocol.h  protocol_test.cc  sample_image.cc  sample_image.h  sample_image_test.cc  serial_port.cc  serial_port.h  serial_port_macos.cc  spdsx_device.cc  spdsx_device.h  spdsx_device_test.cc
test/: CMakeLists.txt
test/source/: spdsx-patchedit_test.cpp
testing/: README.md  all_tests.cc  coverage.sh  fake_port_backend.h  fake_serial_port.h  juce_test_environment.cc  juce_test_environment.h  sync-live-qa.md  temp_dir.h
ui/: app-window.slint
